--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^3.0.0-beta.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.4",
     "stylis": "^4.1.1",
