--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendyol-js/react-carousel": "^3.0.0",
     "aos": "^3.0.0-beta.6",
     "date-fns": "^2.29.3",
     "date-fns-jalali": "^2.29.3-0",
@@ -22,12 +23,14 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-multi-date-picker": "^3.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.4",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^8.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
