--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.7",
     "react-multi-date-picker": "^3.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
