--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "date-fns-jalali": "^2.29.3-0",
     "dayjs": "^1.11.5",
