--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.54.4",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
