--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns-jalali": "^2.29.3-0",
     "dayjs": "^1.11.5",
     "formik": "^2.2.9",
+    "jalaali-js": "^1.2.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
