--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-multi-date-picker": "^3.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.0",
     "sass": "^1.54.4",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
