--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^3.0.0",
+    "animejs": "^3.2.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
@@ -29,6 +30,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-image-crop": "^10.0.8",
     "react-multi-date-picker": "^3.3.1",
+    "react-promise-tracker": "^2.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.0",
