--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jalaali-js": "^1.2.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chat-widget": "^3.1.4",
+    "react-chat-window": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
     "react-elastic-carousel": "^0.11.5",
@@ -33,6 +35,7 @@
     "react-promise-tracker": "^2.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^9.1.0",
     "sass": "^1.54.4",
     "stylis": "^4.1.1",
